Research gap and objective added

--- a/Home.html
+++ b/Home.html
@@ -177,14 +177,14 @@
                                 <svg class="u-svg-content" viewBox="0 0 41.999 41.999" x="0px" y="0px" id="svg-d5eb" style="enable-background:new 0 0 41.999 41.999;"><path d="M36.068,20.176l-29-20C6.761-0.035,6.363-0.057,6.035,0.114C5.706,0.287,5.5,0.627,5.5,0.999v40
 	c0,0.372,0.206,0.713,0.535,0.886c0.146,0.076,0.306,0.114,0.465,0.114c0.199,0,0.397-0.06,0.568-0.177l29-20
 	c0.271-0.187,0.432-0.494,0.432-0.823S36.338,20.363,36.068,20.176z"></path></svg>
-                              </div>&nbsp;Limited systems use SSL as the dialect of the language.
+                              </div>&nbsp;There are no any system that address the organic crop rotation planning in Sri Lankan context.
                             </li>
                             <li>
                               <div class="u-list-icon u-text-custom-color-1">
                                 <svg class="u-svg-content" viewBox="0 0 41.999 41.999" x="0px" y="0px" id="svg-d5eb" style="enable-background:new 0 0 41.999 41.999;"><path d="M36.068,20.176l-29-20C6.761-0.035,6.363-0.057,6.035,0.114C5.706,0.287,5.5,0.627,5.5,0.999v40
 	c0,0.372,0.206,0.713,0.535,0.886c0.146,0.076,0.306,0.114,0.465,0.114c0.199,0,0.397-0.06,0.568-0.177l29-20
 	c0.271-0.187,0.432-0.494,0.432-0.823S36.338,20.363,36.068,20.176z"></path></svg>
-                              </div> &nbsp;Limited platforms exist that are developed to teach SSL.
+                              </div> &nbsp;Existing platforms doesn't take the measured data for the crop rotation plan.
                             </li>
                             <li>
                               <div class="u-list-icon u-text-custom-color-1">
@@ -193,7 +193,7 @@
 	c0.271-0.187,0.432-0.494,0.432-0.823S36.338,20.363,36.068,20.176z"></path></svg>
                               </div>
                             </li>
-                            <li>&nbsp;Limited systems exist that act as a platform specifically designed for HI of Sri Lanka to learn and gain knowledge in SSL.</li>
+                            <li>&nbsp;Usage of providing organic and nonchemical solutions for the identified problems.</li>
                           </ul>
                         </div>
                       </div>
@@ -283,30 +283,25 @@
                       <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-1">
                         <div class="u-container-layout u-container-layout-1">
                           <h2 class="u-align-center-md u-align-center-sm u-align-center-xs u-align-left-lg u-align-left-xl u-text u-text-custom-color-5 u-text-default u-text-1"> Objectives</h2>
-                          <p class="u-align-justify u-text u-text-body-alt-color u-text-2"> The main objective of the research is to develop an interactive learning platform to help learning SSL for hearing impaired children and to guide learning ASL for users who already know SSL in Sri Lanka. The system is expected to provide additional learning recommendations that will be provided to outside videos by converting them into SSL as well as to clear user doubts with an interactive Chabot.</p>
+                          <p class="u-align-justify u-text u-text-body-alt-color u-text-2"> The main objective of this system is to provide the opportunity for the stakeholders to create their crop rotation plan with the help analysis of soil, climate and pests. </p>
                           <h3 class="u-align-left u-text u-text-custom-color-5 u-text-3">Sub Objectives</h3>
                           <ul class="u-align-justify u-custom-list u-spacing-11 u-text u-text-body-alt-color u-text-4">
                             <li>
                               <div class="u-list-icon u-text-custom-color-1">
                                 <svg class="u-svg-content" viewBox="0 0 512 512" id="svg-b51a" style="font-size: 1em; margin: -1em;"><path d="m202.6 478-202.6-186.6 70.5-76.6 121.5 111.9 239.4-292.7 80.6 65.9z" fill="currentColor"></path></svg>
-                              </div>&nbsp;​Provide a game-based teaching component with evaluations at each level to check if the user has grabbed the content as expected.
+                              </div>&nbsp;Gather soil data using IoT device and use it as parameters in an algorithm.
                             </li>
                             <li>
                               <div class="u-list-icon u-text-custom-color-1">
                                 <svg class="u-svg-content" viewBox="0 0 512 512" id="svg-b51a" style="font-size: 1em; margin: -1em;"><path d="m202.6 478-202.6-186.6 70.5-76.6 121.5 111.9 239.4-292.7 80.6 65.9z" fill="currentColor"></path></svg>
-                              </div> &nbsp;​Give the opportunity for a HIP to search anything through Google and learn anything fast.
+                              </div> &nbsp;Identify the pests and diseases based on the provided image and provide solutions through an algorithm.
                             </li>
                             <li>
                               <div class="u-list-icon u-text-custom-color-1">
                                 <svg class="u-svg-content" viewBox="0 0 512 512" id="svg-b51a" style="font-size: 1em; margin: -1em;"><path d="m202.6 478-202.6-186.6 70.5-76.6 121.5 111.9 239.4-292.7 80.6 65.9z" fill="currentColor"></path></svg>
                               </div>
                             </li>
-                            <li>&nbsp;​Develop a system that can facilitate the HIC in SriLanka to learn ASL in an efficient manner.</li>
-                            <li>
-                              <div class="u-list-icon u-text-custom-color-1">
-                                <svg class="u-svg-content" viewBox="0 0 512 512" id="svg-b51a" style="font-size: 1em; margin: -1em;"><path d="m202.6 478-202.6-186.6 70.5-76.6 121.5 111.9 239.4-292.7 80.6 65.9z" fill="currentColor"></path></svg>
-                              </div>Give the opportunity for a HI to gain knowledge through referencing videos which will be captioned in SSL.<br>
-                            </li>
+                            <li>&nbsp;Gather climate data using IoT device and use it as a parameters in an algorithm.</li>
                           </ul>
                         </div>
                       </div>
