changes in home

--- a/Home.html
+++ b/Home.html
@@ -117,7 +117,7 @@
       </nav></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="620" data-image-height="413" id="sec-0d6d">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-custom-font u-text u-text-default u-title u-text-1">HASTHA ONLINE LEARNING</h1>
+        <h1 class="u-custom-font u-text u-text-default u-title u-text-1">SMART SYSTEM FOR OPTIMIZED ORGANIC CROP ROTATION USING PRECISION AGRICULTURE DATA</h1>
         <p class="u-large-text u-text u-text-default u-text-variant u-text-2"> Online Learning Platform for Hearing Impaired Community of Sri Lanka</p>
         <a href="#sec-e5bd" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-5 u-radius-50 u-btn-1" >Read More</a>
       </div>
