--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>HASTHA</title>
+    <title>Govip</title>
+    <link rel="icon" href="./images/Govi.png" type="image/x-icon">
     <link rel="stylesheet" href="static/nicepage.css" media="screen">
     <link rel="stylesheet" href="static/Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="static/jquery.js" defer=""></script>
@@ -16,14 +17,14 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/Hastha-Logo-Draft-1.png"
+		"logo": "images/Govip.png"
     }
   </script>
 
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-sticky u-sticky-0d3a u-header" id="sec-afd3">
     <a href="#" class="u-image u-logo u-image-1" data-image-width="1704" data-image-height="741">
-        <img src="images/Hastha-Logo-Draft-1.png" class="u-logo-image u-logo-image-1">
+        <img src="images/Govip.png" class="u-logo-image u-logo-image-1">
     </a>
     <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 1px; font-weight: 700;" id ="home">
