--- a/Home.html
+++ b/Home.html
@@ -627,7 +627,7 @@
                 <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-image-1" data-image-width="512" data-image-height="512" src="images/charter.png">
                 <h6 class="u-align-center u-text u-text-default u-text-2">Project Charter</h6>
                 <div class="dropdown">
-                <a href="documents/ProjectCharter_2022_059.pdf" target="_blank"> <button onclick="myFunction225()" class="dropbtn" style="text-align: center;">View
+                <a href="documents/project charter.docx" target="_blank"> <button onclick="myFunction225()" class="dropbtn" style="text-align: center;">View
                   </button></a> </div>
               </div>
             </div>
@@ -640,10 +640,10 @@
                   </button>
 
                   <div id="myDropdown4" class="dropdown-content">
-                    <a href="documents/IT19153346_proposal.pdf"  target="_blank">Proposal  IT19153346</a>
-                    <a href="documents/IT19174686_proposal.pdf"  target="_blank">Proposal  IT19174686</a>
-                    <a href="documents/IT19162706_proposal.pdf"  target="_blank">Proposal  IT19162706</a>
-                    <a href="documents/IT19201160_proposal.pdf"  target="_blank">Proposal  IT19201160</a>
+                    <a href="documents/Proposal_Report_23_IT20233808.pdf"  target="_blank">Proposal  IT20233808</a>
+                    <a href="documents/Proposal_Report_23_IT20244552.pdf"  target="_blank">Proposal  IT20244552</a>
+                    <a href="documents/Proposal-Report-23-IT20151874.pdf"  target="_blank">Proposal  IT20151874</a>
+                    <a href="documents/Proposal-report-23-IT20224820.pdf"  target="_blank">Proposal  IT20224820</a>
                   </div>
                 </div>
                 
@@ -658,10 +658,10 @@
                   </button>
 
                   <div id="myDropdown3" class="dropdown-content">
-                    <a href="documents/IT19153346_logbook.pdf"  target="_blank">Logboook IT19153346</a>
-                    <a href="documents/IT19174686_logbook.pdf"  target="_blank">Logboook IT19174686</a>
-                    <a href="documents/IT19162706_proposal.pdf"  target="_blank">Logboook IT19162706</a>
-                    <a href="documents/IT19201160_logbook.pdf"  target="_blank">Logboook IT19201160</a>
+                    <a href="documents/LogBook-23-IT20151874.pdf"  target="_blank">Logboook IT20151874</a>
+                    <a href="documents/LogBook-23-IT20224820.pdf"  target="_blank">Logboook IT20224820</a>
+                    <a href="documents/LogBook-23-IT20233808.pdf"  target="_blank">Logboook IT20233808</a>
+                    <a href="documents/LogBook-23-IT20244552.pdf"  target="_blank">Logboook IT20244552</a>
                   </div>
                 </div>
               </div>
@@ -675,10 +675,10 @@
                   </button>
 
                   <div id="myDropdown2" class="dropdown-content">
-                    <a href="documents/2_StatusDoc_IT19153346_Maddugoda_C.D.pdf"  target="_blank">Status IT19153346</a>
-                    <a href="documents/2_StatusDoc_IT19174686_Ramawickrama H.N.pdf"  target="_blank">Status IT19174686</a>
-                    <a href="documents/2_StatusDoc_IT19162706_Munasinghe M.W.S.S.M.T.M.B.pdf"  target="_blank">Status IT19162706</a>
-                    <a href="documents/2_StatusDoc_IT19201160_WanasingheWADB.pdf"  target="_blank">Status IT19201160</a>
+                    <a href="documents/StatusDoc_IT20151874_Waththaladeniya N.M.pdf"  target="_blank">Status IT20151874</a>
+                    <a href="documents/StatusDoc_IT20224820_Ihalagedara I.H.U.B.pdf"  target="_blank">Status IT20224820</a>
+                    <a href="documents/StatusDoc_IT20233808_Samarakoon S.M.A.D.pdf"  target="_blank">Status IT20233808</a>
+                    <a href="documents/StatusDoc_IT20244552_Ranasinghe R.A.D.M.pdf"  target="_blank">Status IT20244552</a>
                   </div>
                 </div>
               </div>
@@ -693,11 +693,11 @@
                   </button>
 
                   <div id="myDropdown" class="dropdown-content">
-                    <a href="documents/6_FinalReport_2022-059-Final_Report(grp).pdf" class="w3-bar-item w3-button" target="_blank">Final Report Group</a>
-                    <a href="documents/6_FinalReport_IT19153346.pdf"  target="_blank">Final Report IT19153346</a>
-                    <a href="documents/6_FinalReport_IT19174686.pdf"  target="_blank">Final Report IT19174686</a>
-                    <a href="documents/6_FinalReport_IT19162706.pdf"  target="_blank">Final Report IT19162706</a>
-                    <a href="documents/6_FinalReport_IT19201160.pdf"  target="_blank">Final Report IT19201160</a>
+                    <a href="documents/23-113-IT20224820-Individual-Thesis.docx" class="w3-bar-item w3-button" target="_blank">Final Report Group</a>
+                    <a href="documents/23-113-IT20224820-Individual-Thesis.docx"  target="_blank">Final Report IT20224820</a>
+                    <a href="documents/23-113-IT20151874-Individual-Thesis.docx"  target="_blank">Final Report IT20151874</a>
+                    <a href="documents/23-113-IT20233808-Individual-Thesis.docx"  target="_blank">Final Report IT20233808</a>
+                    <a href="documents/23-113-IT20244552-Individual-Thesis.docx"  target="_blank">Final Report IT20244552</a>
                   </div>
                 </div>
               </div>
@@ -730,7 +730,7 @@
                   <div class="u-align-center u-container-style u-layout-cell u-palette-4-light-3 u-radius-50 u-shape-round u-size-40 u-layout-cell-2">
                     <div class="u-container-layout u-container-layout-2"><span class="u-custom-color-5 u-file-icon u-icon u-icon-circle u-icon-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/3683741-c126b349.png" alt=""></span>
                       <h5 class="u-custom-font u-font-montserrat u-text u-text-2">Proposal presentation</h5>
-                      <a href="documents/1_Proposal_Presentation_2022-59.pdf" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-5 u-none u-radius-50 u-text-hover-white u-btn-1" target="_blank">VIEW</a>
+                      <a href="documents/Proposal-Presentataion-23-113.pptx" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-5 u-none u-radius-50 u-text-hover-white u-btn-1" target="_blank">VIEW</a>
                     </div>
                   </div>
                 </div>
@@ -740,7 +740,7 @@
                   <div class="u-align-center u-container-style u-grey-5 u-layout-cell u-radius-50 u-shape-round u-size-40 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3"><span class="u-custom-color-5 u-file-icon u-icon u-icon-circle u-icon-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/3662654-995910c9.png" alt=""></span>
                       <h5 class="u-custom-font u-font-montserrat u-text u-text-3">progress presentation i</h5>
-                      <a href="documents/3_ProgressPresentation_2022_059.pdf" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-5 u-none u-radius-50 u-text-hover-white u-btn-2" target="_blank">VIEW</a>
+                      <a href="documents/ProgressPresentataion-TMP-23-113.pptx" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-5 u-none u-radius-50 u-text-hover-white u-btn-2" target="_blank">VIEW</a>
                     </div>
                   </div>
                   <div class="u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-size-20 u-layout-cell-4">
@@ -756,7 +756,7 @@
                   <div class="u-align-center u-container-style u-layout-cell u-palette-5-light-3 u-radius-50 u-shape-round u-size-40 u-layout-cell-6">
                     <div class="u-container-layout u-container-layout-6"><span class="u-custom-color-5 u-file-icon u-icon u-icon-circle u-icon-3"><img src="images/6895312-bcf089fd.png" alt=""></span>
                       <h5 class="u-custom-font u-font-montserrat u-text u-text-4">progress presentation ii</h5>
-                      <a href="documents/5_Progress_Presentation_II_2022_059.pdf" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-1 u-none u-radius-50 u-text-hover-white u-btn-3" target="_blank">VIEW</a>
+                      <a href="documents/ProgressPresentataion2-TMP-23-113.pptx" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-1 u-none u-radius-50 u-text-hover-white u-btn-3" target="_blank">VIEW</a>
                     </div>
                   </div>
                 </div>
@@ -766,7 +766,7 @@
                   <div class="u-align-center u-container-style u-layout-cell u-palette-1-light-3 u-radius-50 u-shape-round u-size-40 u-layout-cell-7">
                     <div class="u-container-layout u-container-layout-7"><span class="u-custom-color-5 u-file-icon u-icon u-icon-circle u-icon-4" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><img src="images/665156-1bc02501.png" alt=""></span>
                       <h5 class="u-custom-font u-font-montserrat u-text u-text-5">final presentation</h5>
-                      <a href="https://drive.google.com/file/d/1lzm0cVMmOfE1dyCN8uBiwxZKEaEOofu6/view?usp=share_link" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-5 u-none u-radius-50 u-text-hover-white u-btn-4" target="_blank"s>VIEW</a>
+                      <a href="https://onedrive.live.com/edit.aspx?resid=51ADFCE745A10E7C!1043&ithint=file%2cpptx&wdo=2&authkey=!ABB09Z_VxZu5WNA" class="u-align-center u-border-2 u-border-custom-color-5 u-border-hover-custom-color-5 u-btn u-btn-round u-button-style u-hover-custom-color-5 u-none u-radius-50 u-text-hover-white u-btn-4" target="_blank"s>VIEW</a>
                     </div>
                   </div>
                   <div class="u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-size-20 u-layout-cell-8">
