--- a/Home.html
+++ b/Home.html
@@ -392,30 +392,24 @@
                   <div class="u-container-style u-layout-cell u-radius-10 u-size-20 u-white u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                       <div class="u-expanded-width u-palette-2-base u-shape u-shape-rectangle u-shape-3"></div>
-                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-6"> Youtube Video Captioning Module</h2>
-                      <ul class="u-align-justify u-custom-list u-file-icon u-spacing-30 u-text u-text-7">
+                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-default u-text-2">Predicting Crops Based on Soil condtions</h2>
+                      <ul class="u-align-justify u-custom-list u-file-icon u-spacing-30 u-text u-text-3">
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Download video using the user provided link.
+                          </div>Gathering Required Soil Data using IoT sensors 
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Convert transcript of the video to SSL.
+                          </div> Using trained Machine Learning models to predict the crops
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Identifying emotion using text, speech and facial expressions denoted in the video.
-                        </li>
-                        <li>
-                          <div class="u-list-icon">
-                            <img src="images/105212.png" alt="">
-                          </div>Map releveant converted signs and emotions and display in SSL.<br>
+                          </div>Providing Expert organic advices for soil nutrient balancing
                         </li>
                       </ul>
-                      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="images/200w.gif" alt="" data-image-width="200" data-image-height="200">
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-radius-10 u-size-40 u-white u-layout-cell-4">
