--- a/Home.html
+++ b/Home.html
@@ -364,25 +364,24 @@
                   <div class="u-container-style u-layout-cell u-radius-10 u-size-20 u-white u-layout-cell-2">
                     <div class="u-container-layout u-container-layout-2">
                       <div class="u-custom-color-1 u-expanded-width u-shape u-shape-rectangle u-shape-2"></div>
-                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-default u-text-4"> SSL to ASL Translation</h2>
+                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-default u-text-4">Pest Detection and Solutions</h2>
                       <ul class="u-align-justify u-custom-list u-file-icon u-spacing-30 u-text u-text-5">
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Convert a given gesture in Sri Lankan Sign Language into text.
+                          </div> Create a CNN model for object detection and optimizing an algorithm to update a available dataset and provide most suitable solutions based on the usage of the application.
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Convert the recognized text into the corresponding gesture in American Sign Language.
+                          </div> Detect unkown pest using the CNN model created and get the suitable solutions.
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Display translated ASL signs using an animated avatar gif.
+                          </div> Provide most suitable pest control methods based on the environment, weather and the damages on the crops.
                         </li>
                       </ul>
-                      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-2" src="images/FlusteredWellmadeDeinonychus-max-1mb.gif" alt="" data-image-width="480" data-image-height="480">
                     </div>
                   </div>
                 </div>
