--- a/Home.html
+++ b/Home.html
@@ -119,7 +119,7 @@
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="620" data-image-height="413" id="sec-0d6d">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-custom-font u-text u-text-default u-title u-text-1">SMART SYSTEM FOR OPTIMIZED ORGANIC CROP ROTATION USING PRECISION AGRICULTURE DATA</h1>
-        <p class="u-large-text u-text u-text-default u-text-variant u-text-2"> Sri Lanka’s first IOT and Machine Learning Based Smart System for Crop Rotation planning with real time expert advices.  </p>
+        <p class="u-large-text u-text u-text-default u-text-variant u-text-2"> Sri Lanka's first IOT and Machine Learning Based Smart System for Crop Rotation planning with real time expert advices.  </p>
         <a href="#sec-e5bd" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-5 u-radius-50 u-btn-1" >Read More</a>
       </div>
     </section>
@@ -513,14 +513,14 @@
         <div class="direction-r">
           <div class="flag-wrapper">
             <span class="flag">Project Proposal - 12%</span>
-            <span class="time-wrapper"><span class="time">FEBRUARY 2022</span></span>
+            <span class="time-wrapper"><span class="time">FEBRUARY 2023</span></span>
           </div>
           <div class="desc">
             <p>Comrehensive explaination and documentation of research gaps , research problem and proposed solution
               with individual development plan to be acheieved within the year to reach the research objective.
             </p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Proposal Presentation : Marks - 6% | Date : 2nd February 2022</span></p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Proposal Report : Marks - 6% | Date : 11th February 2022</span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Proposal Presentation : Marks - 6% </span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Proposal Report : Marks - 6% </span></p>
           </div>
         </div>
       </li>
@@ -530,14 +530,14 @@
         <div class="direction-l">
           <div class="flag-wrapper">
             <span class="flag">Progress Presentation I  - 16%</span>
-            <span class="time-wrapper"><span class="time">MAY 2022</span></span>
+            <span class="time-wrapper"><span class="time">MAY 2023</span></span>
           </div>
           <div class="desc">
             <p>Live demonstration of individual components to justify 50% completion of each component hence 50% 
               completion of the proposed system.
             </p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Status Document I : Marks - 1% | Date : 13th May 2022</span></p>  
-            <p><span style="color: rgb(243, 179, 61);">◉ Progress Presentation : Marks - 15% | Date : 26th May 2022</span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Status Document I : Marks - 1% </span></p>  
+            <p><span style="color: rgb(243, 179, 61);">◉ Progress Presentation : Marks - 15% </span></p>
         </div>
       </li>
     
@@ -546,12 +546,12 @@
         <div class="direction-r">
           <div class="flag-wrapper">
             <span class="flag">Demo</span>
-            <span class="time-wrapper"><span class="time">OCTOBER 2022</span></span>
+            <span class="time-wrapper"><span class="time">OCTOBER 2023</span></span>
           </div>
           <div class="desc">
             <p>Research poster to present the final view of the completed research product.
             </p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Research Poster : Marks - 0% | Date : 9th October 2022</span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Research Poster : Marks - 0% </span></p>
           </div>
         </div>
       </li>
@@ -560,14 +560,14 @@
         <div class="direction-l">
           <div class="flag-wrapper">
             <span class="flag">Progress Presentation II  - 18%</span>
-            <span class="time-wrapper"><span class="time">OCTOBER 2022</span></span>
+            <span class="time-wrapper"><span class="time">OCTOBER 2023</span></span>
           </div>
           <div class="desc">
             <p>Live demonstration of individual components to justify 90% completion of each component as well as 90% 
               completion of the intergrated proposed system.
             </p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Progress Presentation : Marks - 12% | Date : 11th October 2022</span></p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Code Evaluation : Marks - 6% | Date : 11th October 2022</span></p>            
+            <p><span style="color: rgb(243, 179, 61);">◉ Progress Presentation : Marks - 12% </span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Code Evaluation : Marks - 6% </span></p>            
           </div>
         </div>
       </li>
@@ -576,15 +576,15 @@
         <div class="direction-r">
           <div class="flag-wrapper">
             <span class="flag">    Final Assessment   - 44% </span>
-            <span class="time-wrapper"><span class="time">NOVEMBER 2022</span></span>
+            <span class="time-wrapper"><span class="time">NOVEMBER 2023</span></span>
           </div>
           <div class="desc">
             <p>Final demonstration of the completed product developed throughtout the year.</p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Website Assessment : Marks - 2% | Date : 14th November 2022</span></p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Progress Reports : Marks - 3% | Date : 14th November 2022</span></p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Research Paper : Marks - 10% | Date : 14th November 2022</span></p>
-            <p><span style="color: rgb(243, 179, 61);">◉ Final Presentation: Marks - 10% | Date : 14th November 2022</span></p>  
-            <p><span style="color: rgb(243, 179, 61);">◉ Final Report : Marks - 19% | Date : 14th November 2022</span></p>          
+            <p><span style="color: rgb(243, 179, 61);">◉ Website Assessment : Marks - 2% </span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Progress Reports : Marks - 3% </span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Research Paper : Marks - 10% </span></p>
+            <p><span style="color: rgb(243, 179, 61);">◉ Final Presentation: Marks - 10% </span></p>  
+            <p><span style="color: rgb(243, 179, 61);">◉ Final Report : Marks - 19% </span></p>          
           </div>
         </div>
       </li>
@@ -592,11 +592,11 @@
       <div class="direction-l">
         <div class="flag-wrapper">
           <span class="flag"> VIVA   - 10% </span>
-          <span class="time-wrapper"><span class="time">NOVEMBER 2022</span></span>
+          <span class="time-wrapper"><span class="time">NOVEMBER 2023</span></span>
         </div>
         <div class="desc">
           <p>Final demonstration of the completed product developed throughtout the year.</p>
-          <p><span style="color: rgb(243, 179, 61);">◉ Final VIVA : Marks - 10% | Date : 16th November 2022</span></p>
+          <p><span style="color: rgb(243, 179, 61);">◉ Final VIVA : Marks - 10% </span></p>
         </div>
         </div>
     </li>
