changes in home

--- a/Home.html
+++ b/Home.html
@@ -410,6 +410,7 @@
                           </div>Providing Expert organic advices for soil nutrient balancing
                         </li>
                       </ul>
+                      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-3" src="images/200w.gif" alt="" data-image-width="200" data-image-height="200">
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-radius-10 u-size-40 u-white u-layout-cell-4">
