changes in design

--- a/Home.html
+++ b/Home.html
@@ -391,7 +391,7 @@
                   <div class="u-container-style u-layout-cell u-radius-10 u-size-20 u-white u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                       <div class="u-expanded-width u-palette-2-base u-shape u-shape-rectangle u-shape-3"></div>
-                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-default u-text-2">Predicting Crops Based on Soil condtions</h2>
+                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-default u-text-2">Soil based Crop prediction</h2>
                       <ul class="u-align-justify u-custom-list u-file-icon u-spacing-30 u-text u-text-3">
                         <li>
                           <div class="u-list-icon">
