--- a/Home.html
+++ b/Home.html
@@ -345,20 +345,19 @@
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div>Display words and relevant SSL signs using an animated avatar gif.
+                          </div>Present a year-wise organic crop rotation plan based on the user's input of precise agricultural data.
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Evaluate user input signs using Media Pipe Holistic and Tenser-flow object detection model.
+                          </div> Creation and updating of a crop rotation plan using the Drools Workbench interface.
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div>Correct answer is compared with the detected answer saved in the pickle file from the trained sequential neural network.
+                          </div>Create a crop rotation plan based on input from agricultural experts, including their rules and factual information.
                         </li>
                       </ul>
-                      <img class="u-image u-image-contain u-image-default u-image-1" src="images/1642248391_154986_gif-url.gif" alt="" data-image-width="1200" data-image-height="1080">
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-radius-10 u-size-20 u-white u-layout-cell-2">
