--- a/Home.html
+++ b/Home.html
@@ -414,25 +414,24 @@
                   <div class="u-container-style u-layout-cell u-radius-10 u-size-40 u-white u-layout-cell-4">
                     <div class="u-container-layout u-container-layout-4">
                       <div class="u-expanded-width u-palette-1-base u-shape u-shape-rectangle u-shape-4"></div>
-                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-default u-text-8"> Google Search Module</h2>
+                      <h2 class="u-align-center u-subtitle u-text u-text-custom-color-1 u-text-default u-text-8">Weather based Crop Recommendation</h2>
                       <ul class="u-align-justify u-custom-list u-file-icon u-spacing-30 u-text u-text-9">
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Conversion of Sri Lankan Sign Language to text.
+                          </div> Identify Current weather condition using IOT device.
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Converted text is used for the process of Google Search, and BeautifulSoup is used for Web Scraping.
+                          </div> Recommend Crop and Details about crop using Machine lerning model.
                         </li>
                         <li>
                           <div class="u-list-icon">
                             <img src="images/105212.png" alt="">
-                          </div> Convert search results to SSL and display to the user.
+                          </div> Provide Common solutions to reduce the weather impact.
                         </li>
                       </ul>
-                      <img class="u-image u-image-contain u-image-default u-image-4" src="images/giphy.gif" alt="" data-image-width="1080" data-image-height="1080">
                     </div>
                   </div>
                 </div>
