--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-sticky u-sticky-0d3a u-header" id="sec-afd3">
     <a href="#" class="u-image u-logo u-image-1" data-image-width="1704" data-image-height="741">
-        <img src="images/Govip.png" class="u-logo-image u-logo-image-1">
+        <img src="images/govip.png" class="u-logo-image u-logo-image-1">
     </a>
     <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 1px; font-weight: 300;" id ="home">
